# bevy

crates/bevy_tasks/: Cargo.toml
crates/bevy_tasks/src/: lib.rs  web_worker_task_pool.rs
examples/wasm/: index.html
