[package]
name = "bevy_tasks"
version = "0.5.0"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Lachlan Sneff <lachlan.sneff@gmail.com>",
    "Philip Degarmo <aclysma@gmail.com>",
]
description = "A task executor for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["bevy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
futures-lite = "1.4.0"
event-listener = "2.4.0"
async-executor = "1.3.0"
async-channel = "1.4.2"
instant = { version = "0.1", features = ["wasm-bindgen"] }
num_cpus = "1"
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = { version = "0.2" }
js-sys = { version = "0.3" }
web-sys = { version = "0.3", features = ["Blob", "Navigator", "Url", "Window", "Worker"] }
wasm_set_stack_pointer = { git = "https://github.com/kettle11/wasm_set_stack_pointer" }

[target.'cfg(target_arch = "wasm32")'.build]
rustflags = '-Ctarget-feature=+atomics,+bulk-memory'
